vbnc/vbnc/vbnc/tests/Errors/30311-24.vb
Class T
    Const M_Double As Double = "c"c
End Class